--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,27 @@
+# Core FastAPI and server dependencies
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 python-dotenv==1.0.0
-supabase==2.0.2
-google-adk==0.1.0
 pydantic==2.5.0
 httpx==0.25.2
-pytest==7.4.3
-pytest-asyncio==0.21.1
+
+# Database and authentication
+supabase==2.0.2
 PyJWT==2.8.0
-email-validator==2.1.0 
+
+# Google ADK and AI dependencies
+google-adk==0.5.0
+google-generativeai==0.8.3
+google-cloud-aiplatform==1.60.0
+google-auth==2.29.0
+
+# Web scraping dependencies
+aiohttp==3.9.1
+beautifulsoup4==4.12.2
+
+# Validation and utilities
+email-validator==2.1.0
+
+# Testing dependencies
+pytest==7.4.3
+pytest-asyncio==0.21.1 
