--- a/.gitignore
+++ b/.gitignore
@@ -408,6 +408,12 @@ test-results/
 playwright-report/
 playwright/.cache/
 
+# E2E test result files (regardless of location)
+e2e-test-results.json
+e2e-test-results.xml
+**/e2e-test-results.json
+**/e2e-test-results.xml
+
 # =============================================================================
 # BUILD & DEPLOYMENT
 # =============================================================================
