--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,8 +6,19 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint .",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
+    "test": "vitest run",
+    "test:unit": "vitest run src/test/",
+    "test:integration": "vitest run tests/integration/",
+    "test:polling": "vitest run tests/integration/polling-validation-simplified.test.ts",
+    "test:api": "vitest run tests/integration/api-*.test.ts",
+    "test:watch": "vitest",
+    "test:watch:unit": "vitest src/test/",
+    "test:watch:integration": "vitest tests/integration/",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui",
+    "test:debug": "vitest --inspect-brk --no-file-parallelism",
     "create-admin": "node scripts/create-admin-user.js"
   },
   "dependencies": {
@@ -30,19 +41,25 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^22.15.28",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
+    "@vitest/ui": "^3.1.4",
     "dotenv": "^16.5.0",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "jsdom": "^26.1.0",
     "tw-animate-css": "^1.3.2",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "vitest": "^3.1.4"
   },
   "overrides": {
     "@radix-ui/react-label": {
