--- a/package.json
+++ b/package.json
@@ -1,7 +1,68 @@
 {
   "devDependencies": {
+    "@playwright/test": "^1.52.0",
+    "@types/node": "^22.15.29",
     "autoprefixer": "^10.4.21",
+    "playwright": "^1.52.0",
     "postcss": "^8.5.4",
     "tailwindcss": "^4.1.8"
-  }
+  },
+  "name": "agent-template",
+  "description": "> **Revolutionary Self-Contained Agent Framework** - Build AI agents with zero configuration",
+  "version": "1.0.0",
+  "main": "index.js",
+  "dependencies": {
+    "browserslist": "^4.25.0",
+    "caniuse-lite": "^1.0.30001720",
+    "electron-to-chromium": "^1.5.161",
+    "escalade": "^3.2.0",
+    "fraction.js": "^4.3.7",
+    "nanoid": "^3.3.11",
+    "node-releases": "^2.0.19",
+    "normalize-range": "^0.1.2",
+    "picocolors": "^1.1.1",
+    "postcss-value-parser": "^4.2.0",
+    "source-map-js": "^1.2.1",
+    "update-browserslist-db": "^1.1.3"
+  },
+  "scripts": {
+    "test": "npm run test:frontend && npm run test:backend && npm run test:e2e",
+    "test:frontend": "cd frontend && npm run test",
+    "test:frontend:unit": "cd frontend && npm run test:unit",
+    "test:frontend:integration": "cd frontend && npm run test:integration",
+    "test:frontend:watch": "cd frontend && npm run test:watch",
+    "test:backend": "cd backend && python -m pytest",
+    "test:backend:unit": "cd backend && python -m pytest tests/unit/",
+    "test:backend:integration": "cd backend && python -m pytest tests/integration/",
+    "test:backend:agents": "cd backend && python -m pytest tests/agents/",
+    "test:backend:coverage": "cd backend && python -m pytest --cov=. --cov-report=html",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:debug": "playwright test --debug",
+    "test:e2e:report": "playwright show-report",
+    "test:ci": "npm run test:frontend -- --coverage && npm run test:backend:coverage && npm run test:e2e",
+    "e2e": "playwright test",
+    "e2e:headed": "playwright test --headed",
+    "e2e:ui": "playwright test --ui",
+    "e2e:debug": "playwright test --debug",
+    "e2e:report": "playwright show-report",
+    "e2e:auth": "playwright test e2e-tests/01-authentication.spec.ts",
+    "e2e:workflow": "playwright test e2e-tests/02-job-workflow.spec.ts",
+    "e2e:mobile": "playwright test e2e-tests/03-mobile-workflow.spec.ts",
+    "e2e:api-auth": "playwright test e2e-tests/04-api-authentication.spec.ts",
+    "e2e:api-security": "playwright test e2e-tests/05-agent-api-security.spec.ts",
+    "e2e:api": "playwright test e2e-tests/04-api-authentication.spec.ts e2e-tests/05-agent-api-security.spec.ts"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/dmautz1/ai-agent-template.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/dmautz1/ai-agent-template/issues"
+  },
+  "homepage": "https://github.com/dmautz1/ai-agent-template#readme"
 }
