Simplified agent initialization and registry to use specified agent name in file, bugfixes, doc updates.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# AI Agent Template - Comprehensive .gitignore
+# AI Agent Platform - Comprehensive .gitignore
 # For Python/FastAPI backend, Next.js frontend, Supabase, Docker, and AI/ML development
 
 # =============================================================================
