--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "postcss": "^8.5.4",
     "tailwindcss": "^4.1.8"
   },
-  "name": "agent-template",
+  "name": "ai-agent-platform",
   "description": "> **Revolutionary Self-Contained Agent Framework** - Build AI agents with zero configuration",
   "version": "1.0.0",
   "main": "index.js",
