--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@
 .env.prod
 .envrc
 
+# Centralized configuration - NEVER commit with real values
+config.yaml
+
 # API Keys and secrets
 *.key
 *.pem
