--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "tsc -p tsconfig.app.json && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "test": "vitest run",
@@ -48,6 +48,10 @@
     "react-syntax-highlighter": "^15.6.1",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.8",
+    "typescript": "~5.8.3",
+    "@vitejs/plugin-react": "^4.4.1",
+    "vite": "^6.3.5",
+    "tw-animate-css": "^1.3.2",
     "zod": "^3.25.49"
   },
   "devDependencies": {
@@ -58,7 +62,6 @@
     "@types/node": "^22.15.28",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
-    "@vitejs/plugin-react": "^4.4.1",
     "@vitest/ui": "^3.1.4",
     "dotenv": "^16.5.0",
     "eslint": "^9.25.0",
@@ -66,10 +69,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "jsdom": "^26.1.0",
-    "tw-animate-css": "^1.3.2",
-    "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5",
     "vitest": "^3.1.4"
   },
   "overrides": {
