--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.57.0",
+    "react-js-cron": "^5.2.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.6.1",
     "react-syntax-highlighter": "^15.6.1",
