--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,10 @@ anthropic>=0.40.0
 # Validation and utilities
 email-validator>=2.1.0
 
+# Scheduling and cron expression handling
+croniter>=2.0.0
+pytz>=2023.3
+
 # Testing dependencies
 pytest>=7.4.3
 pytest-asyncio>=0.21.1
